# mfc-project

./: .coverage.uge-X670E-AORUS-XTREME.950034.XXPxlQMx  .coveragerc  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .yamllint.yml  AI_DEVELOPMENT_GUIDE.md  API_REFERENCE.md  ARCHITECTURE.md  CLAUDE.md  COMPREHENSIVE_TEST_REPORT.md  CONFIGURATION_GUIDE.md  DEVELOPMENT_PRIORITIES.md  DOCUMENTATION_SUMMARY.md  GPU_FIX_INSTRUCTIONS.md  HOOKS_AND_AUTOMATION.md  INTEGRATED_TEST_SUITE.md  KEY_MODULES.md  PHASES_1_4_COMPLETION_REPORT.md  PROJECT_ARCHITECTURE.md  PROJECT_DOCUMENTATION_SUMMARY.md  QUICK_START_GUIDE.md  README-Ansible.md  README.md  SYSTEM_ARCHITECTURE.md  TDD_Agent_54_Final_Report.md  TDD_NOTIFICATION_TEST_FRAMEWORK_SPECIFICATION.md  access_control_impl.py  add_electrode_handling.py  ansible-minio-setup.yml  ansible.cfg  check_issues.py  conversation_log.md  create_https_enhancement_issue.py  create_https_issue.py  create_mfc_stack_issue.py  create_test_failure_issues.py  dependency_optimization_report.md  deploy.sh  (+26 more)
.bmad-core/: install-manifest.yaml
.bmad-infrastructure-devops/: install-manifest.yaml
.claude/: GITLAB_INTEGRATION.md  hooks  settings.json  settings.json.backup
.claude-ai-conv/: session_20250709_104655.jsonl
.serena/: project.yml
architecture/: brownfield-mfc-enhancement-architecture.md  mfc_data_architecture_optimization_plan.md
docs/: AI_DEVELOPMENT_GUIDE.md  API_REFERENCE.md  COMPLETE_MFC_PERFORMANCE_ANALYSIS.md  COMPUTATIONAL_RESOURCE_ANALYSIS.md  CONFIGURATION_GUIDE.md  DEPENDENCY_MANAGEMENT.md  DEVELOPMENT_PRIORITIES.md  DOCUMENTATION_SUMMARY.md  EIS_QCM_SENSOR_INTEGRATION.md  GPU_ACCELERATION_GUIDE.md  GUI_PERFORMANCE_IMPROVEMENTS.md  HOOKS_MIGRATION.md  HOOKS_MIGRATION_GUIDE.md  INTEGRATED_BIOFILM_METABOLIC_MODEL_DOCUMENTATION.md  KEY_MODULES.md  LITERATURE_VALIDATION_ANALYSIS.md  MATHEMATICAL_MODELS_CELL_ATTACHMENT.md  MFC_CONSTANTS_LITERATURE_VALIDATION.md  MFC_SIMULATION_DOCUMENTATION.md  MIKTEX_BUILD_DOCUMENTATION.md  NAFION_MEMBRANE_PROPERTIES_DATABASE.md  PROJECT_ARCHITECTURE.md  PROJECT_DOCUMENTATION_SUMMARY.md  QUICK_START_GUIDE.md  RUNNABLE_FILES_USAGE.md  SHEWANELLA_ONEIDENSIS_METABOLIC_NETWORK.md  SIMULATION_RESULTS.md  SUBSTRATE_UTILIZATION_ANALYSIS_REPORT.md  SYSTEM_ARCHITECTURE.md  S_oneidensis_MR1_kinetic_parameters.md  TEST_SUITE_DOCUMENTATION.md  ci-test-failures-summary.md  debug_system_guide.md  eis_biofilm_literature_review.md  energy_balance_analysis.md  enhanced-streamlit-frontend-spec.md  flow_optimization_analysis.md  performance-analysis.md  qcm_biofilm_literature_summary.md  settings.yaml  (+1 more)
group_vars/: all.yml
local-channel/: index.html
prds/: prd-enhancement-plan.md  user_stories.md
q-learning-mfcs/: .gitattributes  .gitignore  CHANGELOG.md  DEBUG_MODE.md  MFC_Q_Learning_Report.tex  MFC_Q_Learning_Report_Simple_analysis.json  PROJECT_STATUS_SYNC.json  README.md  SIMULATION_RESULTS.md  analyze_gitlab_issues.py  analyze_pdf_comments.py  build_qlearning.py  close_resolved_issues.py  create_https_issue_direct.py  create_merge_request.py  create_mypy_issue.py  create_qlearning_comparison.py  create_summary_plots.py  create_test_qtables.py  energy_sustainability_analysis.py  flow_optimization_analysis.md  generate_all_figures.py  generate_pdf_report.py  generate_performance_graphs.py  mfc_100h_gpu.mojo  odes.mojo  (+35 more)
(+1134 files in other folders)
