[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mfc-project"
version = "0.1.0"
description = "MFC Project with TDD Methodology"
authors = [
    {name = "Eugenio La Cava"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.1,<3",
    "scipy>=1.16.0,<2",
    "pandas>=2.3.1,<3",
    "matplotlib>=3.10.3,<4",
    "pyyaml>=6.0.2,<7",
    "streamlit>=1.47.1,<2",
    "plotly>=6.2.0,<7",
    "altair>=5.5.0,<6",
    "pydantic>=2.10.4",
    "requests>=2.31.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1,<9",
    "pytest-cov>=4.0.0",
    "pytest-watch>=4.2",
    "pytest-xdist>=3.0",
    "pytest-mock>=3.10",
    "pytest-testdox>=3.0",
    "pytest-clarity>=1.0",
    "pytest-sugar>=0.9",
    "pytest-benchmark>=4.0",
    "hypothesis>=6.0",
    "factory-boy>=3.2",
    "faker>=18.0",
    "responses>=0.23",
    "freezegun>=1.2",
    "ruff>=0.14.14,<0.15",
    "mypy>=1.17.0,<2",
    "black>=22.0.0",
    "isort>=5.0.0",
    "pre-commit>=2.0.0",
    "bandit>=1.7.0",
    "safety>=2.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=95",
    "--strict-markers",
    "--tb=short",
    "-ra"  # Show summary of all except passed
]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (slower, external deps)",
    "e2e: End-to-end tests (slowest, full system)",
    "slow: Slow tests (run separately from main suite)"
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/venv/*",
    "*/virtualenv/*",
    "*/.pixi/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:"
]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["src"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.ruff]
target-version = "py312"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["B011"]